[gd_scene load_steps=5 format=3 uid="uid://c8gsbeagl2a3i"]

[ext_resource type="Script" uid="uid://pvb04ion08yu" path="res://scenes/gui/scr_end_credits.gd" id="1_yal4k"]

[sub_resource type="Gradient" id="Gradient_lt8ie"]
offsets = PackedFloat32Array(0, 0.213472, 1)
colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0.724763, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_abrxy"]
gradient = SubResource("Gradient_lt8ie")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ajo6"]
bg_color = Color(0, 0, 0, 0.701961)

[node name="EndCredits" type="Node2D"]
script = ExtResource("1_yal4k")

[node name="ImageScrollContainer" type="ScrollContainer" parent="."]
offset_left = 2.0
offset_top = 2.0
offset_right = 85.0
offset_bottom = 118.0
vertical_scroll_mode = 3

[node name="Sprite2D" type="Sprite2D" parent="ImageScrollContainer"]
position = Vector2(9, 58)
scale = Vector2(1.53125, 1.875)
texture = SubResource("GradientTexture2D_abrxy")
flip_h = true

[node name="ImageContainer" type="VBoxContainer" parent="ImageScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacer" type="Control" parent="ImageScrollContainer/ImageContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="Label" type="Label" parent="ImageScrollContainer/ImageContainer"]
layout_mode = 2
text = "the end."

[node name="Spacer2" type="Control" parent="ImageScrollContainer/ImageContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(111, 60)
scale = Vector2(1.53125, 1.875)
texture = SubResource("GradientTexture2D_abrxy")

[node name="CreditsScrollContainer" type="ScrollContainer" parent="."]
offset_left = 64.0
offset_top = 2.0
offset_right = 152.0
offset_bottom = 118.0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CreditsLabel" type="Label" parent="CreditsScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 6
text = "rsdsdg<sdh<sdh<rhrhdss<faf<a"
autowrap_mode = 3

[node name="ReturnLabel" type="Label" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 2.0
offset_top = 110.0
offset_right = 42.0
offset_bottom = 118.0
theme_override_styles/normal = SubResource("StyleBoxFlat_1ajo6")
text = "(press x to return to main menu)"
